maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:13: error: expected class or object definition
def keepHandOnWall(){
^Escaper:32: error: expected class or object definition
def goNorth(){
^Escaper:39: error: expected class or object definition
def VerifNorth():Boolean={
^Escaper:50: error: Unmatched closing brace '}' ignored here
}
^